# openstrand-sdk

./: .commitlintrc.cjs  .eslintrc.json  .gitignore  .npmignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  release.config.cjs  tsconfig.json  typedoc.json  vitest.config.ts
.github/workflows/: ci.yml  commitlint.yml  docs.yml  publish.yml  release-draft.yml  release-semantic.yml  release.yml
src/: client.test.ts  client.ts  errors.ts  index.ts  storage.test.ts  storage.ts  types.ts
src/llm/: index.ts  provider.ts  retry.ts  service.ts  types.ts
src/modules/: analytics.module.test.ts  analytics.module.ts  cost.module.ts  dataIntelligence.module.test.ts  dataIntelligence.module.ts  enrichment.module.test.ts  enrichment.module.ts  export.module.ts  factCheck.module.test.ts  factCheck.module.ts  gamification.module.test.ts  gamification.module.ts  illustrations.module.test.ts  illustrations.module.ts  learning.module.test.ts  learning.module.ts  ner.ts  plugins.module.test.ts  plugins.module.ts  pomodoro.module.ts  productivity.module.ts  rag.module.ts  summarization.test.ts  summarization.ts  templates.module.test.ts  templates.module.ts  voice.module.ts  wizard.module.test.ts  wizard.module.ts
src/openstrand_sdk/: __init__.py
src/openstrand_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/openstrand_sdk/models/: __init__.py
src/storage/: sql-adapter.ts
src/storage/adapters/: pglite.ts  web-sqlite.ts
tests/: index.test.ts
